<resources>
    <string name="app_name">weatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="fab">fab</string>
    <string name="_10_3_2020_13_20">10.3.2020 13.20</string>
    <string name="sunny">sunny</string>
    <string name="_20">20</string>
    <string name="_34_c_10_c">34°C/10°C</string>
    <string name="madrid">Madrid</string>
    <string name="days">Hours</string>
    <string name="hours">Days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">Empty</string>
    <string name="image">image</string>
    <string name="imSearch">imSearch</string>
    <string name="imButton" />
    <string name="_2_11_2020">2/11/2020</string>
    <string name="days1">Days</string>
</resources>